@@ -1,5 +1,11 @@
 2008-05-29  Jonh Wendell <jwendell@gnome.org>
 
+	* src/vinagre-window.c,
+	* src/vinagre-tab.[ch]: Get rid of grabbing cursor. Keyboard is grabbed
+	automatically.
+
+2008-05-29  Jonh Wendell <jwendell@gnome.org>
+
 	Fixed bug #522100 - Provide option to leave fullscreen mode
 
 2008-05-12  Jonh Wendell <jwendell@gnome.org>
